--- a/frontend/hustle-app/src/app/Components/startpage/startpage.component.html
+++ b/frontend/hustle-app/src/app/Components/startpage/startpage.component.html
@@ -5,3 +5,4 @@
 <button (click)="events()">Go to events</button>
 <button (click)="post()">Go to posts</button>
 <button (click)="login()">Login</button>
+<button (click)="getSports()">Sports</button>
