--- a/frontend/hustle-app/src/app/Components/startpage/startpage.component.html
+++ b/frontend/hustle-app/src/app/Components/startpage/startpage.component.html
@@ -6,3 +6,4 @@
 <button (click)="post()">Go to posts</button>
 <button (click)="login()">Login</button>
 <button (click)="getSports()">Sports</button>
+<button (click)="ipsrobajmoSve">Sve</button>
