--- a/slice/assets/styles/main.css
+++ b/slice/assets/styles/main.css
@@ -648,6 +648,60 @@ button {
   }
 }
 
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: translate(-50%, -50%) rotateZ(0deg);
+            transform: translate(-50%, -50%) rotateZ(0deg);
+  }
+
+  50% {
+    -webkit-transform: translate(-50%, -50%) rotateZ(180deg);
+            transform: translate(-50%, -50%) rotateZ(180deg);
+  }
+
+  100% {
+    -webkit-transform: translate(-50%, -50%) rotateZ(360deg);
+            transform: translate(-50%, -50%) rotateZ(360deg);
+  }
+}
+
+@-o-keyframes rotate {
+  0% {
+    -o-transform: translate(-50%, -50%) rotateZ(0deg);
+       transform: translate(-50%, -50%) rotateZ(0deg);
+  }
+
+  50% {
+    -o-transform: translate(-50%, -50%) rotateZ(180deg);
+       transform: translate(-50%, -50%) rotateZ(180deg);
+  }
+
+  100% {
+    -o-transform: translate(-50%, -50%) rotateZ(360deg);
+       transform: translate(-50%, -50%) rotateZ(360deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    -webkit-transform: translate(-50%, -50%) rotateZ(0deg);
+         -o-transform: translate(-50%, -50%) rotateZ(0deg);
+            transform: translate(-50%, -50%) rotateZ(0deg);
+  }
+
+  50% {
+    -webkit-transform: translate(-50%, -50%) rotateZ(180deg);
+         -o-transform: translate(-50%, -50%) rotateZ(180deg);
+            transform: translate(-50%, -50%) rotateZ(180deg);
+  }
+
+  100% {
+    -webkit-transform: translate(-50%, -50%) rotateZ(360deg);
+         -o-transform: translate(-50%, -50%) rotateZ(360deg);
+            transform: translate(-50%, -50%) rotateZ(360deg);
+  }
+}
+
 .o-cover {
   background-size: cover;
   background-position: center center;
@@ -749,4 +803,31 @@ button {
 
 .c-form__button:hover {
   background-color: #ca7d38;
+}
+
+.o-preloader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.o-preloader__spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+       -o-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 6px solid rgba(255, 255, 255, 0.8);
+  border-top-color: #e9964c;
+  -webkit-animation: rotate 0.8s infinite linear;
+       -o-animation: rotate 0.8s infinite linear;
+          animation: rotate 0.8s infinite linear;
 }
