--- a/frontend/hustle-app/src/app/Components/welcome/welcome.component.html
+++ b/frontend/hustle-app/src/app/Components/welcome/welcome.component.html
@@ -1,14 +1,21 @@
 
 <div class="o-cover" style="background-image: url('/assets/images/court.jpg')">
       <div class="c-form js-form-login u-display-block u-opacity-1" [formGroup]="loginForm">
+        <span class="c-form__text c-form__text--small" *ngIf="localStorageItem('loginError') == 'Y' "> Incorrect username or password </span>
+        <br />
+        <br />
+        <span class="c-form__text c-form__text--small" *ngIf="checkIfValidField('username')"> Username is required field</span>
         <div class="c-form__input-group">
           <i class="material-icons c-form__icon">person</i>
           <input  class="c-form__input" type="text" placeholder="Username" formControlName="username">
         </div>
+        <span class="c-form__text c-form__text--small" *ngIf="checkIfValidField('password')"> Password is required field</span>
+        <br />
         <div class="c-form__input-group">
           <i class="material-icons c-form__icon">lock</i>
           <input  class="c-form__input" type="password" placeholder="Password" formControlName="password">
         </div>
+        <br />
         <div class="c-form__field-group">
           <button class="c-form__button" type="button" [disabled]="!loginForm.valid" (click)="login()">Login</button>
         </div>
@@ -17,30 +24,39 @@
         </div>
       </div>
 
+    <span class="c-form__text c-form__text--small" *ngIf="localStorageItem('registerError') == 'Y' "> Server could not accept your registration</span>
+    <br />
+    <br />
     <div class="c-form u-display-none js-form-register u-display-none u-opacity-0" [formGroup]="registerForm">
+      <span class="c-form__text c-form__text--small" *ngIf="!registerForm.controls['firstName'].valid"> First name is invalid</span>
       <div class="c-form__input-group">
         <i class="material-icons c-form__icon" >person</i>
         <input class="c-form__input" type="text" formControlName="firstName" placeholder="First Name">
       </div>
+      <span class="c-form__text c-form__text--small" *ngIf="!registerForm.controls['lastName'].valid"> Last name is invalid</span>
       <div class="c-form__input-group">
         <i class="material-icons c-form__icon">person</i>
         <input class="c-form__input" type="text" formControlName="lastName" placeholder="Last Name">
       </div>
+      <span class="c-form__text c-form__text--small" *ngIf="!registerForm.controls['username'].valid"> Username is invalid</span>
       <div class="c-form__input-group">
         <i class="material-icons c-form__icon">person</i>
         <input class="c-form__input" type="text" formControlName="username" placeholder="Username">
       </div>
+      <span class="c-form__text c-form__text--small" *ngIf="!registerForm.controls['email'].valid"> Email is invalid</span>
       <div class="c-form__input-group">
         <i class="material-icons c-form__icon">mail</i>
         <input class="c-form__input" type="email" formControlName="email" placeholder="Email">
       </div>
+      <span class="c-form__text c-form__text--small" *ngIf="!registerForm.controls['password'].valid"> Password  is invalid</span>
       <div class="c-form__input-group">
         <i class="material-icons c-form__icon">lock</i>
-        <input class="c-form__input" type="password" formControlName="password" placeholder="Password">
+        <input class="c-form__input" type="password" formControlName="password" placeholder="Password" #password>
       </div>
+      <span class="c-form__text c-form__text--small" *ngIf="checkIfPasswordMatch(password.value,confPassword.value)"> Passwords are not the same</span>
       <div class="c-form__input-group">
         <i class="material-icons c-form__icon">lock</i>
-        <input class="c-form__input" type="password" formControlName="confirmPassword" placeholder="Confirm Password">
+        <input class="c-form__input" type="password" formControlName="confirmPassword" placeholder="Confirm Password" #confPassword>
       </div>
       <div class="c-form__field-group">
         <button class="c-form__button" type="button" (click)="register()" [disabled]="!registerForm.valid">Register</button>
