--- a/frontend/hustle-app/src/app/Components/profile/profile.component.html
+++ b/frontend/hustle-app/src/app/Components/profile/profile.component.html
@@ -1,60 +1,1 @@
-<div class="container">
-    <div class="row profile">
-		<div class="col-md-3">
-			<div class="profile-sidebar">
-				<!-- SIDEBAR USERPIC -->
-				<div class="profile-userpic">
-					<img src="http://vectorvice.com/Blog/wp-content/uploads/2015/01/wallpaper-for-facebook-profile-picture-for-boys-hd.jpg" class="img-responsive" alt="">
-				</div>
-				<div class="profile-usertitle">
-					<div class="profile-usertitle-name text-center">
-						<h2>lala</h2>
-					</div>
-				</div>
-				<div class="profile-usermenu text-center">
-					<ul class="nav">
-						<li class="active">
-							<a href="#profileDetails" data-toggle="tab">
-							<i class="glyphicon glyphicon-home"></i>
-							Details </a>
-						</li>
-						<li>
-							<a href="#changeDescription" data-toggle="tab">
-							<i class="glyphicon glyphicon-user"></i>
-							Account Settings </a>
-						</li>
-            <li>
-							<a href="#message" data-toggle="tab">
-							<i class="glyphicon glyphicon-envelop"></i>
-							Message </a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-    <div class="col-md-6">
-      <div class="tab-content">
-        <div class="tab-pane active" id="profileDetails">
-          <ul class="list-group">
-            <li class="list-group-item text-muted">Profile</li>
-            <li class="list-group-item text-right"><span class="pull-left"><strong>Full Name:</strong></span>
-              blabla
-            </li>
-            <li class="list-group-item text-right"><span class="pull-left"><strong>Mobile Number:</strong></span>
-              blalb
-            </li>
-            <li class="list-group-item text-right"><span class="pull-left"><strong>Email:</strong></span>
-              blabla
-            </li>
-            <li class="list-group-item text-right"><span class="pull-left"><strong>Description:</strong></span>
-              blabla
-            </li>
-            <li class="list-group-item text-right"><span class="pull-left"><strong>Role:</strong></span>
-              blabla
-            </li>
-          </ul>
-      </div>
-      </div>
-    </div>
-	</div>
-</div>
+<p>Profil</p>
