--- a/slice/assets/styles/main.css
+++ b/slice/assets/styles/main.css
@@ -726,6 +726,18 @@ button {
           transform: translate(-50%, -50%);
 }
 
+.c-form--big {
+  position: static;
+  -webkit-transform: translate(0, 0);
+       -o-transform: translate(0, 0);
+          transform: translate(0, 0);
+  max-width: 750px;
+}
+
+.c-form--big .c-form__input-group:not(:last-child) {
+  margin-bottom: 40px;
+}
+
 .c-form__input-group {
   position: relative;
   width: 100%;
@@ -911,7 +923,82 @@ button {
 
 .c-content {
   color: white;
-  padding-left: 200px;
+  padding: 20px 20px 20px 220px;
   max-width: 100%;
   width: 100%;
+}
+
+.c-content__row {
+  width: 100%;
+  max-width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+}
+
+.c-card {
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #2e3030;
+  color: #eee;
+  margin-bottom: 20px;
+  position: relative;
+  display: block;
+  text-decoration: none;
+}
+
+.c-card:hover {
+  text-decoration: none;
+  background-color: #222323;
+}
+
+.c-card--three {
+  width: calc(33.3333% - 20px);
+  margin-right: 20px;
+}
+
+.c-card--three:nth-child(3n) {
+  margin-right: 0;
+}
+
+.c-card__favorite {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  color: white;
+}
+
+.c-card__favorite.is-selected {
+  color: yellow;
+}
+
+.c-card__title {
+  font-size: 28px;
+  margin-bottom: 20px;
+  color: #bd7c15;
+  font-weight: 600;
+}
+
+.c-card__content {
+  font-weight: 300;
+  line-height: 1.3;
+  color: #ddd;
+  margin-bottom: 20px;
+}
+
+.c-card__icon {
+  font-size: 28px;
+  vertical-align: middle;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.c-card__date {
+  color: #f39c12;
+  font-size: 14px;
+  font-weight: 300;
 }
