--- a/frontend/hustle-app/src/app/Components/view/view.component.html
+++ b/frontend/hustle-app/src/app/Components/view/view.component.html
@@ -1,4 +1,31 @@
-<div *ngIf="Type == 'E'">Ovo je za evente {{getObject().name}}</div>
-<div *ngIf="Type == 'V'">Ovo je za venue {{getObject().name}}</div>
-<div *ngIf="Type == 'F'">Ovo je za favorite {{getObject().name}}</div>
+<div class="c-content__row" *ngIf="Type == 'E'">
+  <a href="#" class="c-card c-card--three">
+    <span class="c-card__favorite is-selected"><i class="material-icons">star</i></span>
+    <h1 class="c-card__title"><i class="material-icons c-card__icon">event_note</i> Lorem Ipsum</h1>
+    <p class="c-card__content">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto at atque consectetur delectus distinctio doloribus, enim et eum eveniet fugit neque, nostrum odit optio ratione sequi sint, velit vero voluptate!
+    </p>
+    <p class="c-card__date">01.06.2018.</p>
+  </a>
+</div>
+<div class="c-content__row" *ngIf="Type == 'V'">
+  <a href="#" class="c-card c-card--three">
+    <span class="c-card__favorite is-selected"><i class="material-icons">star</i></span>
+    <h1 class="c-card__title"><i class="material-icons c-card__icon">event_note</i> Lorem Ipsum</h1>
+    <p class="c-card__content">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto at atque consectetur delectus distinctio doloribus, enim et eum eveniet fugit neque, nostrum odit optio ratione sequi sint, velit vero voluptate!
+    </p>
+    <p class="c-card__date">01.06.2018.</p>
+  </a>
+</div>
+<div class="c-content__row" *ngIf="Type == 'F'">
+  <a href="#" class="c-card c-card--three">
+    <span class="c-card__favorite is-selected"><i class="material-icons">star</i></span>
+    <h1 class="c-card__title"><i class="material-icons c-card__icon">event_note</i> Lorem Ipsum</h1>
+    <p class="c-card__content">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto at atque consectetur delectus distinctio doloribus, enim et eum eveniet fugit neque, nostrum odit optio ratione sequi sint, velit vero voluptate!
+    </p>
+    <p class="c-card__date">01.06.2018.</p>
+  </a>
+</div>
 
