--- a/frontend/hustle-app/src/app/Components/profile/profile.component.html
+++ b/frontend/hustle-app/src/app/Components/profile/profile.component.html
@@ -1,1 +1,35 @@
-<p>Profil</p>
+<div class="c-form c-form--big" [formGroup]="updateForm">
+  <span class="c-form__text c-form__text--small" *ngIf="checkIfValidField('firstName','U')"> First name is invalid</span>
+  <div class="c-form__input-group">
+    <i class="material-icons c-form__icon" >person</i>
+    <input class="c-form__input" type="text" formControlName="firstName" placeholder="First Name">
+  </div>
+  <span class="c-form__text c-form__text--small" *ngIf="checkIfValidField('lastName','U')"> Last name is invalid</span>
+  <div class="c-form__input-group">
+    <i class="material-icons c-form__icon">person</i>
+    <input class="c-form__input" type="text" formControlName="lastName" placeholder="Last Name">
+  </div>
+  <span class="c-form__text c-form__text--small" *ngIf="checkIfValidField('username','U')"> Username is invalid</span>
+  <div class="c-form__input-group">
+    <i class="material-icons c-form__icon">person</i>
+    <input class="c-form__input" type="text" formControlName="username" placeholder="Username">
+  </div>
+  <span class="c-form__text c-form__text--small" *ngIf="checkIfValidField('email','U')"> Email is invalid</span>
+  <div class="c-form__input-group">
+    <i class="material-icons c-form__icon">mail</i>
+    <input class="c-form__input" type="email" formControlName="email" placeholder="Email">
+  </div>
+  <span class="c-form__text c-form__text--small" *ngIf="checkIfValidField('password','U')"> Password  is invalid</span>
+  <div class="c-form__input-group">
+    <i class="material-icons c-form__icon">lock</i>
+    <input class="c-form__input" type="password" formControlName="password" placeholder="Password" #password>
+  </div>
+  <span class="c-form__text c-form__text--small" *ngIf="checkIfValidField('confirmPassword','U')"> Passwords are not the same</span>
+  <div class="c-form__input-group">
+    <i class="material-icons c-form__icon">lock</i>
+    <input class="c-form__input" type="password" formControlName="confirmPassword" placeholder="Confirm Password" #confPassword>
+  </div>
+  <div class="c-form__field-group">
+    <button class="c-form__button" type="button" (click)="update()" [disabled]="!updateForm.valid">Update</button>
+  </div>
+</div>
