--- a/frontend/hustle-app/src/assets/styles/main.css
+++ b/frontend/hustle-app/src/assets/styles/main.css
@@ -525,6 +525,12 @@ body {
           box-sizing: border-box;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 input {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -705,13 +711,14 @@ button {
 .o-cover {
   background-size: cover;
   background-position: center center;
+  background-attachment: fixed;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
-  /*overflow: hidden;*/
+  overflow-x: hidden;
 }
 
 .c-form {
@@ -742,6 +749,7 @@ button {
   position: relative;
   width: 100%;
   padding-bottom: 10px;
+  margin-bottom: 30px;
 }
 
 .c-form__input-group:after {
@@ -755,19 +763,12 @@ button {
   background-color: rgba(255, 255, 255, 0.6);
 }
 
-.c-form__input-group:not(:last-child) {
-  margin-bottom: 30px;
-}
-
 .c-form__input-group--no-border:after {
   content: none;
 }
 
 .c-form__field-group {
   width: 100%;
-}
-
-.c-form__field-group:not(:last-child) {
   margin-bottom: 30px;
 }
 
@@ -1032,4 +1033,15 @@ button {
   color: #f39c12;
   font-size: 14px;
   font-weight: 300;
+}
+
+.c-popup {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  padding: 20px;
+  background-color: rgba(243, 156, 18, 0.8);
+  border-radius: 5px;
+  z-index: 9999;
+  color: white;
 }
