--- a/frontend/hustle-app/src/app/Components/event-view/event-view.component.html
+++ b/frontend/hustle-app/src/app/Components/event-view/event-view.component.html
@@ -1,17 +1,19 @@
-<div class="c-content__row">
-  <div  class="c-card c-card--three">
-    <h1 class="c-card__title"><i class="material-icons c-card__icon">event_note</i> {{object.name}}</h1>
-    <span class="c-form__text c-form__text--small"> Description of event:</span>
-    <p class="c-card__content">{{object.description}}</p>
-    <span class="c-form__text c-form__text--small"> Location of event:</span>
-    <p class="c-card__date">{{object.location}}</p>
-    <span class="c-form__text c-form__text--small"> Type of venue where event is happening</span>
-    <p class="c-card__date">{{venue.type}}</p>
-    <span class="c-form__text c-form__text--small"> Sport that is playing</span>
-    <p class="c-card__date">{{sport.name}}</p>
-    <img src="{{object.image.imageName}}" class="c-form__text c-form__text--small"/>
-    <span class="c-form__text c-form__text--small"> Date </span>
-    <p class="c-card__date">{{object.date}}.</p>
+<div *ngFor="let event of events">
+  <div class="c-content__row">
+    <div  class="c-card c-card--three">
+      <h1 class="c-card__title"><i class="material-icons c-card__icon">event_note</i> {{event.name}}</h1>
+      <span class="c-form__text c-form__text--small"> Description of event:</span>
+      <p class="c-card__content">{{event.description}}</p>
+      <span class="c-form__text c-form__text--small"> Location of event:</span>
+      <p class="c-card__date">{{event.location}}</p>
+      <span class="c-form__text c-form__text--small"> Type of venue where event is happening</span>
+      <p class="c-card__date">{{getVenue(event.idVenue).name}}</p>
+      <span class="c-form__text c-form__text--small"> Sport that is playing</span>
+      <p class="c-card__date">{{getSport(event.idSport).name}}</p>
+      <img src="{{event.image.imageName}}" class="c-form__text c-form__text--small"/>
+      <span class="c-form__text c-form__text--small"> Date </span>
+      <p class="c-card__date">{{event.date}}.</p>
 
+    </div>
   </div>
 </div>
