--- a/frontend/hustle-app/src/app/Components/welcome/welcome.component.html
+++ b/frontend/hustle-app/src/app/Components/welcome/welcome.component.html
@@ -20,7 +20,7 @@
       <button class="c-form__button" type="button" [disabled]="!loginForm.valid" (click)="login()">Login</button>
     </div>
     <div class="c-form__field-group c-form__field-group--centered">
-      <span class="c-form__text c-form__text--small">Don't have an account? <a href="#" class="js-switch-register">Register.</a></span>
+      <span class="c-form__text c-form__text--small">Don't have an account? <a style="cursor: pointer;"  class="js-switch-register">Register.</a></span>
     </div>
   </div>
 
@@ -62,7 +62,7 @@
       <button class="c-form__button" type="button" (click)="register()">Register</button>
     </div>
     <div class="c-form__field-group c-form__field-group--centered">
-      <span class="c-form__text c-form__text--small">Already have an account? <a href="#" class="js-switch-login">Login.</a></span>
+      <span class="c-form__text c-form__text--small">Already have an account? <a style="cursor: pointer;" class="js-switch-login">Login.</a></span>
     </div>
   </div>
 </div>
