--- a/frontend/hustle-app/src/app/Components/favorite-view/favorite-view.component.html
+++ b/frontend/hustle-app/src/app/Components/favorite-view/favorite-view.component.html
@@ -1,11 +1,13 @@
-<div class="c-content__row">
-  <div  class="c-card c-card--three">
-    <h1 class="c-card__title"><i class="material-icons c-card__icon">event_note</i> {{object.name}}</h1>
-    <span class="c-form__text c-form__text--small"> Type of venue:</span>
-    <br />
-    <p class="c-card__content">{{object.type}}</p>
-    <span class="c-form__text c-form__text--small"> Sports to play:</span>
-    <br />
-    <p class="c-card__content" *ngFor="let sport of object.sports">{{sport.name}}</p>
+<div *ngFor="let favorite of favorites">
+  <div class="c-content__row">
+    <div  class="c-card c-card--three">
+      <h1 class="c-card__title"><i class="material-icons c-card__icon">event_note</i> {{favorite.name}}</h1>
+      <span class="c-form__text c-form__text--small"> Type of venue:</span>
+      <br />
+      <p class="c-card__content">{{favorite.type}}</p>
+      <span class="c-form__text c-form__text--small"> Sports to play:</span>
+      <br />
+      <p class="c-card__content" *ngFor="let sport of favorite.sports">{{sport.name}}</p>
+    </div>
   </div>
 </div>
