--- a/frontend/hustle-app/src/app/Components/venues-view/venues-view.component.html
+++ b/frontend/hustle-app/src/app/Components/venues-view/venues-view.component.html
@@ -1,13 +1,16 @@
-<div class="c-content__row">
-  <div  class="c-card c-card--three">
-    <span class="c-card__favorite" *ngIf="checkFav(object.id)" (click)="add()"><i class="material-icons">star_border</i></span>
-    <span class="c-card__favorite is-selected" *ngIf="!checkFav(object.id)" (click)="add()"><i class="material-icons">star</i></span>
-    <h1 class="c-card__title"><i class="material-icons c-card__icon">event_note</i> {{object.name}}</h1>
-    <span class="c-form__text c-form__text--small"> Description of venue:</span>
-    <p class="c-card__content">{{object.description}}</p>
-    <span class="c-form__text c-form__text--small"> Location of venue:</span>
-    <p class="c-card__date">{{object.location}}</p>
-    <span class="c-form__text c-form__text--small"> Type of venue:</span>
-    <p class="c-card__date">{{object.type}}</p>
+<div *ngFor="let venue of venues">
+  <div class="c-content__row">
+    <div  class="c-card c-card--three">
+      <input hidden value="{{venue.id}}" #id>
+      <span class="c-card__favorite" *ngIf="checkFav(venue.id)" (click)="add(venue.id)"><i class="material-icons">star_border</i></span>
+      <span class="c-card__favorite is-selected" *ngIf="!checkFav(venue.id)" (click)="add(venue.id)"><i class="material-icons">star</i></span>
+      <h1 class="c-card__title"><i class="material-icons c-card__icon">event_note</i> {{venue.name}}</h1>
+      <span class="c-form__text c-form__text--small"> Description of venue:</span>
+      <p class="c-card__content">{{venue.description}}</p>
+      <span class="c-form__text c-form__text--small"> Location of venue:</span>
+      <p class="c-card__date">{{venue.location}}</p>
+      <span class="c-form__text c-form__text--small"> Type of venue:</span>
+      <p class="c-card__date">{{venue.type}}</p>
+    </div>
   </div>
 </div>
