--- a/frontend/hustle-app/src/app/Components/venues-view/venues-view.component.html
+++ b/frontend/hustle-app/src/app/Components/venues-view/venues-view.component.html
@@ -2,8 +2,8 @@
   <div class="c-content__row">
     <div  class="c-card c-card--three">
       <input hidden value="{{venue.id}}" #id>
-      <span class="c-card__favorite" *ngIf="checkFav(venue.id)" (click)="add(venue.id)"><i class="material-icons">star_border</i></span>
-      <span class="c-card__favorite is-selected" *ngIf="!checkFav(venue.id)" (click)="add(venue.id)"><i class="material-icons">star</i></span>
+      <span class="c-card__favorite" *ngIf="!switch" (click)="add(venue.id)"><i class="material-icons">star_border</i></span>
+      <span class="c-card__favorite is-selected" *ngIf="switch" (click)="add(venue.id)"><i class="material-icons">star</i></span>
       <h1 class="c-card__title"><i class="material-icons c-card__icon">event_note</i> {{venue.name}}</h1>
       <span class="c-form__text c-form__text--small"> Description of venue:</span>
       <p class="c-card__content">{{venue.description}}</p>
