--- a/frontend/hustle-app/src/app/Components/startpage/startpage.component.html
+++ b/frontend/hustle-app/src/app/Components/startpage/startpage.component.html
@@ -1,3 +1,6 @@
+<div class="c-popup js-popup" *ngIf="pop">
+  Information has been saved successfully.
+</div>
 <div class="o-cover" style="background-image: url('/assets/images/court-vector.jpg');">
   <div class="c-sidebar">
     <div class="c-sidebar__user-photo" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/1/1e/Default-avatar.jpg')"></div>
@@ -22,19 +25,19 @@
     <div *ngIf="getType() == ''"> Ovo će se ispisat kada je ništa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat impedit ipsum laboriosam perferendis tempore.
       Commodi dolorem in officiis perferendis quos suscipit, voluptate? Maiores, quae voluptatem. Eius et molestiae nam officia!</div>
     <div *ngIf="getType() == 'P'">
-      <app-profile></app-profile>
+      <app-profile [(boolPop)]="pop"></app-profile>
     </div>
     <div *ngIf="getType() == 'E'">
         <app-event-view></app-event-view>
     </div>
     <div *ngIf="getType() == 'V'">
-      <app-venues-view [(bool)]="switch"></app-venues-view>
+      <app-venues-view></app-venues-view>
     </div>
     <div *ngIf="getType() == 'F'">
       <app-favorite-view></app-favorite-view>
     </div>
     <div *ngIf="getType() == 'C'">
-      <app-create-event></app-create-event>
+      <app-create-event [(boolPop)]="pop"></app-create-event>
     </div>
   </div>
 </div>
