--- a/frontend/hustle-app/src/app/Components/event-view/event-view.component.html
+++ b/frontend/hustle-app/src/app/Components/event-view/event-view.component.html
@@ -13,7 +13,7 @@
       <span class="c-form__text c-form__text--small"> Sport that is playing</span>
       <p class="c-card__date">{{event.sport.name}}</p>
       <span class="c-form__text c-form__text--small"> Date </span>
-      <p class="c-card__date">{{event.date}}.</p>
+      <p class="c-card__date">{{event.date | date}}.</p>
 
     </div>
   </div>
